--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "outhebox/laravel-translations": "^1.4"
+        "outhebox/laravel-translations": "^1.4",
+        "spatie/laravel-translatable": "^6.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
