feat(users): split name into first_name and last_name and add role-based permissions
refactor(auth): update registration and profile to use first_name and last_name
feat(tickets): add ticket and message system with API endpoints
feat(roles): implement role and permission management
feat(dashboard): enhance admin dashboard with statistics
chore: add spatie/laravel-permission package

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "outhebox/laravel-translations": "^1.4",
+        "spatie/laravel-permission": "^6.23",
         "spatie/laravel-translatable": "^6.11"
     },
     "require-dev": {
