--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: ftp.myjarak.com
+        server: ftp://88.214.57.17:21
         username: fayd
         password: N8kHieP7WFwBiAyK
